Collapsing menu and style fixes

--- a/src/_less/header.less
+++ b/src/_less/header.less
@@ -5,16 +5,17 @@
 	line-height: 1em;
 
 	background: fadeout(@link-color, 90%);
-	border-bottom: 1px solid rgba(0,0,0,.75);
+	border-bottom: 1px solid lighten(#000, 25%);
 	.box-shadow(0, 0, 15px, #000);
 	//.transition(font-size, 300ms);
 
 	h1
 	{
 		font: 700 5em 'Tangerine', sans-serif;
-		margin: 0 @padding -.2em -3px;
+		margin: 0 0 -.2em -3px;
 		text-shadow: rgba(0,0,0, 50%) 0 0 6px;
 		color: inherit;
+		position: relative;
 	}
 	
 	ul
@@ -44,6 +45,8 @@
 			background: fadeout(@link-color, 93%);
 			text-shadow: rgba(0,0,0, 50%) 0 0 6px;
 
+			border-bottom: 2px solid fadeout(@link-color, 93%);
+
 			&:hover,
 			&:active
 			{
@@ -53,6 +56,7 @@
 			&.current
 			{
 				color: @text-color;
+				border-bottom: 2px solid @link-color;
 				text-shadow: rgba(0,0,0, 75%) 0 0 6px;
 			}
 		}
@@ -80,6 +84,15 @@
 				background: fadeout(@link-color, 93%);
 			}
 		}
+	}
+
+	#menu-toggle
+	{
+		display: none;
+    	position: absolute;
+    	right: 0;
+    	top: 0;
+    	outline: none;
 	}
 
 	/*&:before
