--- a/src/_less/special.less
+++ b/src/_less/special.less
@@ -5,7 +5,7 @@
 
 .frame
 {
-	border: 1px solid rgba(0,0,0,.5);
+	border: 1px solid rgba(0,0,0,.25);
 	border-radius: 5px;
 	background: #fff;
 	.box-shadow(2px, 2px, 15px, rgba(0,0,0,.35));
